# SIPLinuxExample

./: .gitignore  CMakeLists.txt  README.md
main/libs/curl/mips_gcc540/lib/: libcurl.la  libcurl.so.4.8.0
main/libs/curl/mips_gcc540/lib/pkgconfig/: libcurl.pc
main/libs/curl/mips_gcc540/share/man/man1/: curl-config.1  curl.1  mk-ca-bundle.1
main/libs/curl/mips_gcc540/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXY_ERROR.3  (+455 more)
main/libs/openssl/arm/lib/: libcrypto.so.1.1
main/libs/openssl/arm_ze/lib/: libcrypto.so.1.1
main/libs/openssl/arm_ze/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
main/libs/openssl/mips_gcc540/share/man/man1/: openssl-asn1parse.1ossl  openssl-ca.1ossl  openssl-ciphers.1ossl  openssl-cmds.1ossl  openssl-cmp.1ossl  openssl-cms.1ossl  openssl-crl.1ossl  openssl-crl2pkcs7.1ossl  openssl-dgst.1ossl  openssl-dhparam.1ossl  openssl-dsa.1ossl  openssl-dsaparam.1ossl  openssl-ec.1ossl  openssl-ecparam.1ossl  openssl-enc.1ossl  openssl-engine.1ossl  openssl-errstr.1ossl  openssl-fipsinstall.1ossl  openssl-gendsa.1ossl  openssl-genpkey.1ossl  openssl-genrsa.1ossl  openssl-info.1ossl  openssl-kdf.1ossl  openssl-list.1ossl  openssl-mac.1ossl  openssl-nseq.1ossl  openssl-ocsp.1ossl  openssl-passwd.1ossl  openssl-pkcs12.1ossl  openssl-pkcs7.1ossl  openssl-pkcs8.1ossl  openssl-pkey.1ossl  openssl-pkeyparam.1ossl  openssl-pkeyutl.1ossl  openssl-prime.1ossl  openssl-rand.1ossl  openssl-rehash.1ossl  openssl-req.1ossl  openssl-rsa.1ossl  openssl-rsautl.1ossl  (+13 more)
main/libs/openssl/mips_gcc540/share/man/man7/: openssl_user_macros.7ossl
main/libs/sip/arm/include/: sip_sdk.h  sip_sdk_media.h
main/libs/sip/arm_ez/include/: sip_sdk.h  sip_sdk_media.h
main/libs/sip/mips/include/: sip_sdk.h  sip_sdk_media.h
main/libs/sip/mips_gcc540/include/: sip_sdk.h
main/src/: main.c  main.cpp
main/src/sip/: SipHandle.cpp  SipHandle.hpp  SipMediaHandle.cpp  SipMediaHandle.hpp  sip_handle.c  sip_media_handle.c
main/src/utils/: AlsaUtils.cpp  AlsaUtils.hpp  PCMUtils.cpp  SimulateCode.cpp  SimulateCode.hpp
res/: device.json
